clusters/apps/workloads/moneymatter/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moneymatter
  labels:
    app.kubernetes.io/name: moneymatter
    app.kubernetes.io/part-of: fleet
    app.kubernetes.io/managed-by: argocd
